Fix high contrast mode for the image editor.
As far as I can tell, you can't set !important from inside the typescript, so I used a var to set the preview color and set important in css. I also changed the top, bottom, and side bars to all have black backgrounds, which is different from the released version but I think more in-line with high contrast in general.

--- a/theme/color-themes/overrides/high-contrast-overrides.css
+++ b/theme/color-themes/overrides/high-contrast-overrides.css
@@ -13,3 +13,17 @@
 .barcharticon {
     filter: invert(1);
 }
+
+/* Image Editor */
+.image-editor-topbar, .image-editor-bottombar, .image-editor-sidebar {
+    background: var(--pxt-neutral-background1) !important;
+}
+.image-editor-tool-buttons {
+    background: none !important;
+}
+.image-editor-color-buttons .image-editor-button {
+    border: 1px solid var(--pxt-neutral-foreground1);
+}
+.image-editor-canvas, .image-editor-canvas:hover, .image-editor-canvas:focus {
+    outline: none !important;
+}
